--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="../src/PlanetSVG/saturn.svg" />
 
-    <title></title>
+    <title>Solar System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
