--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1,  maximum-scale=1.0, user-scalable=no, height=device-height"
     />
     <meta name="theme-color" content="#000000" />
 
